feat: Initial implementation of the accordion XBlock
Initial working Accordion XBlock

# Conflicts:
#	setup.py

diff --git a/.github/workflows/ci-frontend.yml b/.github/workflows/ci-frontend.yml
new file mode 100644
index 0000000..741569b
--- /dev/null
+++ b/.github/workflows/ci-frontend.yml
@@ -0,0 +1,35 @@
+name: Frontend CI
+
+on:
+  push:
+    branches:
+    - main
+  pull_request:
+
+jobs:
+  tests:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    strategy:
+      matrix:
+        npm-test:
+        - lint
+        - test
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup Nodejs Env
+      run: echo "NODE_VER=`cat .nvmrc`" >> $GITHUB_ENV
+    - uses: actions/setup-node@v2
+      with:
+        node-version: ${{ env.NODE_VER }}
+    - run: npm ci
+    - run: npm run lint
+    - run: npm run coverage
+    - name: upload coverage
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: false
+        flags: frontend
diff --git a/.github/workflows/ci.yml b/.github/workflows/ci.yml
index 18cde08..80f4f04 100644
--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        python-version: ['3.8']
-        toxenv: [quality, docs, django32, django40]
+        python-version: ['3.11', '3.12']
+        toxenv: [quality, docs, django42]

     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: setup python
       uses: actions/setup-python@v2
       with:
@@ -37,9 +37,9 @@ jobs:
       run: tox

     - name: Run coverage
-      if: matrix.python-version == '3.8' && matrix.toxenv == 'django32'
+      if: matrix.python-version == '3.11' && matrix.toxenv == 'django42'
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        flags: unittests
-        fail_ci_if_error: true
+ 

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38-django{32,40}, quality, docs
+envlist = py38-django32,py{311,312}-django42, quality, docs
 skipsdist = true
 
 [doc8]
@@ -38,7 +38,7 @@ norecursedirs = .* docs requirements site-packages
 [testenv]
 deps =
     django32: Django>=3.2,<4.0
-    django40: Django>=4.0,<4.1
+    django42: Django>=4.2,<5.0
     -r{toxinidir}/requirements/test.txt
 allowlist_externals =
     mkdir
@@ -78,8 +78,8 @@ allowlist_externals =
 deps =
     -r{toxinidir}/requirements/quality.txt
 commands =
-    pylint accordion test_utils manage.py
+    pylint accordion manage.py
     pycodestyle accordion manage.py
     pydocstyle accordion manage.py
-    isort --check-only --diff test_utils accordion manage.py
+    isort --check-only --diff accordion manage.py
     make selfcheck
