--- a/requirements/base.in
+++ b/requirements/base.in
@@ -1,8 +1,7 @@
 # Core requirements for using this application
 -c constraints.txt
 
-django-statici18n
 edx-i18n-tools
-Mako
-XBlock 
+importlib-resources
+XBlock
 xblock-utils
